src/objects/Account_Merge_Related_Lists_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Each record configures a single related list group in the account merge tool (MERC_MergedAccounts.page)

The name of the record should be the api name of the object.</description>
    <fields>
        <fullName>Account_Relationship_Name__c</fullName>
        <description>The value representing the parent child relationship between Account and this object. e.g. Meeting Participants is represented as &apos;Event_Participants__r&apos;</description>
        <inlineHelpText>The value representing the parent child relationship between Account and this object. e.g. Meeting Participants is represented as &apos;Event_Participants__r&apos;</inlineHelpText>
        <label>Account Relationship Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Winning_Account_Deletes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box indicates that objects related to the winning account may be deleted.</description>
        <inlineHelpText>Checking this box indicates that objects related to the winning account may be deleted.</inlineHelpText>
        <label>Allow Winning Account Deletes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Losing_Acct_Related_List_Field_Set_MERC__c</fullName>
        <description>The fieldset used to create the related list for the losing account.</description>
        <label>Losing Account Related List Field Set</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_MERC__c</fullName>
        <description>A number indicating the order which this related list should appear on the page in relation to the other related lists.</description>
        <inlineHelpText>A number indicating the order which this related list should appear on the page in relation to the other related lists.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Field_MERC__c</fullName>
        <description>The field that links the object to an account.</description>
        <label>Parent Account Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path_to_Cust_Id_MERC__c</fullName>
        <description>The path from the object to the account Cust_ID_GLBL__c. e.g. Account_MERC__r.Cust_Id_GLBL__c</description>
        <inlineHelpText>The path from the object to the account Cust_ID_GLBL__c. e.g. Account_MERC__r.Cust_Id_GLBL__c</inlineHelpText>
        <label>Path to Cust_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_API_Name__c</fullName>
        <description>The api name of the object which the related records are being source from.</description>
        <inlineHelpText>The api name of the object which the related records are being source from.</inlineHelpText>
        <label>Related Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Acct_Related_List_Field_Set_MERC__c</fullName>
        <description>The fieldset used to create the winning account related list table</description>
        <label>Winning Account Related List Field Set</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Merge Related Lists</label>
</CustomObject>